Solved some alignment issues

--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -55,6 +55,7 @@
 .data{
     font-size: 1.5vw;
     color: rgb(248, 246, 246);
+    text-align: justify;
 }
 
 .aligned1{
