--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -15,6 +15,10 @@
     width:85%;
     margin: 0px;
 }
+
+.header{
+    margin-left: 10px;
+}
 }
 
 .header:hover{
