--- a/src/components/MyWork/MyWork.module.css
+++ b/src/components/MyWork/MyWork.module.css
@@ -69,6 +69,7 @@ h2{
     font-size: 1.5vw;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bolder;
+    text-align: justify;
 }
 
 h5{
