--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -182,6 +182,7 @@ p{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.5vw;
     font-weight:900;  
+    text-align: justify;
 }
 
 .stars {
